# Bloom

./: Cargo.toml  quality-checklist.txt
src/: main.rs  util.rs
src/game_types/: mod.rs  models.rs  physics_object_base.rs  player.rs  player_list.rs  playing_field.rs
src/game_types/scenes/: mod.rs  shooter_scene.rs
src/traits/: draw_target.rs  dyn_vertex_buffer.rs  dyn_vertex_buffer_binding.rs  dyn_vertex_buffer_map.rs  gl_handle.rs  material.rs  mod.rs  scene.rs  vertex.rs
src/types/: buffer.rs  compute_pipeline.rs  framebuffer.rs  game.rs  gfx.rs  input.rs  mesh.rs  mod.rs  model.rs  pipeline.rs  program.rs  sprite_animator.rs  sprite_list.rs  sprite_object.rs  task_schedule.rs  texture.rs  vertex_array.rs  window.rs
src/types/game_types/: bullet.rs  bullet_list.rs  mod.rs  player.rs
src/types/materials/: hello_triangle_material.rs  mod.rs  sprite_material.rs
src/types/vertices/: instance_model_vertex.rs  mod.rs  pos2_vertex.rs  pos_color_vertex.rs  pos_tex_vertex.rs  pos_vertex.rs  sprite_actor_vertex.rs  sprite_instance_vertex.rs
