[package]
name = "bloom"
version = "0.1.0"
authors = ["Dark Kitsu <cbmuench@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.10"
fennec_algebra = { path = "../fennec_algebra" }
rand = "0.7.3"
glfw = "0.40.0"
gl = "0.14.0"